@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20130220
+VERSION=20140126
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
